[gd_scene load_steps=3 format=3 uid="uid://vns3b43duul1"]

[ext_resource type="Script" path="res://core/scenes/MainMenu.gd" id="1_0ro6d"]
[ext_resource type="PackedScene" uid="uid://bm48mbi0uswyk" path="res://core/scenes/Lobby.tscn" id="2_36krn"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1_0ro6d" )
__meta__ = {
"_edit_use_anchors_": false
}
lobby_scene = ExtResource( "2_36krn" )

[node name="Host" type="PanelContainer" parent="."]
offset_left = 29.0
offset_top = 36.0
offset_right = 229.0
offset_bottom = 116.0
script = null

[node name="VBoxContainer" type="VBoxContainer" parent="Host"]
offset_left = 7.0
offset_top = 7.0
offset_right = 193.0
offset_bottom = 103.0
script = null

[node name="Label" type="Label" parent="Host/VBoxContainer"]
offset_right = 186.0
offset_bottom = 26.0
text = "Host a game"
align = 1
uppercase = true
structured_text_bidi_override_options = []
script = null

[node name="PortBox" type="HBoxContainer" parent="Host/VBoxContainer"]
offset_top = 30.0
offset_right = 186.0
offset_bottom = 63.0
script = null

[node name="Label" type="Label" parent="Host/VBoxContainer/PortBox"]
offset_top = 3.0
offset_right = 41.0
offset_bottom = 29.0
text = "Port: 
"
structured_text_bidi_override_options = []
script = null

[node name="PortEdit" type="LineEdit" parent="Host/VBoxContainer/PortBox"]
offset_left = 45.0
offset_right = 186.0
offset_bottom = 33.0
size_flags_horizontal = 3
text = "3000"
structured_text_bidi_override_options = []
script = null

[node name="HostButton" type="Button" parent="Host/VBoxContainer"]
offset_top = 67.0
offset_right = 186.0
offset_bottom = 96.0
text = "Host"
script = null

[node name="Join" type="PanelContainer" parent="."]
offset_left = 389.0
offset_top = 45.0
offset_right = 654.0
offset_bottom = 159.0
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Join"]
offset_left = 7.0
offset_top = 7.0
offset_right = 258.0
offset_bottom = 140.0
script = null

[node name="Label" type="Label" parent="Join/VBoxContainer"]
offset_right = 251.0
offset_bottom = 26.0
text = "Join a Game"
align = 1
uppercase = true
structured_text_bidi_override_options = []
script = null

[node name="IPBox" type="HBoxContainer" parent="Join/VBoxContainer"]
offset_top = 30.0
offset_right = 251.0
offset_bottom = 63.0
script = null

[node name="Label" type="Label" parent="Join/VBoxContainer/IPBox"]
offset_top = 3.0
offset_right = 23.0
offset_bottom = 29.0
text = "IP: "
structured_text_bidi_override_options = []
script = null

[node name="IPEdit" type="LineEdit" parent="Join/VBoxContainer/IPBox"]
offset_left = 27.0
offset_right = 251.0
offset_bottom = 33.0
size_flags_horizontal = 3
text = "127.0.0.1"
structured_text_bidi_override_options = []
script = null

[node name="PortBox" type="HBoxContainer" parent="Join/VBoxContainer"]
offset_top = 67.0
offset_right = 251.0
offset_bottom = 100.0
script = null

[node name="Label" type="Label" parent="Join/VBoxContainer/PortBox"]
offset_top = 3.0
offset_right = 41.0
offset_bottom = 29.0
text = "Port: "
structured_text_bidi_override_options = []
script = null

[node name="PortEdit" type="LineEdit" parent="Join/VBoxContainer/PortBox"]
offset_left = 45.0
offset_right = 251.0
offset_bottom = 33.0
size_flags_horizontal = 3
text = "3000"
structured_text_bidi_override_options = []
script = null

[node name="JoinButton" type="Button" parent="Join/VBoxContainer"]
offset_top = 104.0
offset_right = 251.0
offset_bottom = 133.0
text = "Join"
script = null

[node name="Modules" type="PanelContainer" parent="."]
offset_left = 31.0
offset_top = 188.0
offset_right = 233.0
offset_bottom = 482.0
script = null

[node name="VBoxContainer" type="VBoxContainer" parent="Modules"]
offset_left = 7.0
offset_top = 7.0
offset_right = 195.0
offset_bottom = 287.0
script = null

[node name="Label" type="Label" parent="Modules/VBoxContainer"]
offset_right = 188.0
offset_bottom = 26.0
text = "Modules"
align = 1
structured_text_bidi_override_options = []
script = null

[node name="ModuleList" type="ItemList" parent="Modules/VBoxContainer"]
offset_top = 30.0
offset_right = 188.0
offset_bottom = 280.0
size_flags_vertical = 3
items = []
script = null

[connection signal="pressed" from="Host/VBoxContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Join/VBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
